# product-of-exponentials

./: .gitignore  README.md
product_of_exponentials/: CMakeLists.txt  package.xml
product_of_exponentials/include/product_of_exponentials/: product_of_exponentials.hpp  rviz_visualize.hpp  visibility_control.h
product_of_exponentials/src/: product_of_exponentials.cpp  product_of_exponentials_node.cpp  rviz_visualize.cpp
product_of_exponentials/test/: unit_test_product_of_exponentials.cpp
